--- a/Servicios/Destapar-desague-de-cocina.html
+++ b/Servicios/Destapar-desague-de-cocina.html
@@ -130,27 +130,27 @@ Destapar desague de cocina
 		  <!--TotalPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Alcohol-boricado-como-se-usa.html">Alcohol boricado como se usa </a> 
+       <a href="../Servicios/Destapaciones-de-cañerias-con-maquinas.html">Destapaciones de cañerias con maquinas </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapacaños-manual-walmart.html">Destapacaños manual walmart </a> 
+       <a href="../Servicios/Empresas-na-zona-leste-de-sp.html">Empresas na zona leste de sp </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Servicios/Dans-quel-pays-est-bahia-bla.html">Dans quel pays est bahia bla </a> 
+       <a href="../Servicios/Con-Que-Se-Destapa-El-Cantilde;o.html">Con Que Se Destapa El Caño </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapaciones-de-cañerias-en-zona-norte.html">Destapaciones de cañerias en zona norte </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Con-Maquina.html">Destapaciones Con Maquina </a> 
          </li>
 <!--EndPostsList-->
 <!--PostsList-->
          <li  class="list-inline-item">
-       <a href="../Destapa-Cañerias/Destapa-cañerias-zona-sur-berazategui.html">Destapa cañerias zona sur berazategui </a> 
+       <a href="../Servicios/Destapa-cañerias-liquido-precio.html">Destapa cañerias liquido precio </a> 
          </li>
 <!--EndPostsList-->
 
@@ -213,27 +213,27 @@ Destapar desague de cocina
                   <!--TotalRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Como-destapar-un-bantilde;o-dificil.html">Como destapar un baño dificil </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-toilet.html">Como destapar un toilet </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Con-Que-Destapo-Una-Cantilde;eria.html">Con Que Destapo Una Cañeria </a> 
+       <a href="../Servicios/Precios-de-destapaciones-de-inodoros.html">Precios de destapaciones de inodoros </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapación-De-Cañerías.html">Destapación De Cañerías </a> 
+       <a href="../Destapa-Cañerias/Destapacion-de-cloacas-precios.html">Destapacion de cloacas precios </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Como-se-puede-destapar-el-baño-sin-destapacaños.html">Como se puede destapar el baño sin destapacaños </a> 
+       <a href="../Servicios/Informacion-sobre-las-estrellas.html">Informacion sobre las estrellas </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Limpieza-De-Desagues.html">Limpieza De Desagues </a> 
+       <a href="../Servicios/Destapar-Cantilde;eria-De-Inodoro.html">Destapar Cañeria De Inodoro </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
@@ -243,27 +243,27 @@ Destapar desague de cocina
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Pendiente-Cantilde;eria-Cloacal.html">Pendiente Cañeria Cloacal </a> 
+       <a href="../Destapa-Cañerias/Como-destapar-un-inodoro-en-casa.html">Como destapar un inodoro en casa </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Alcohol-boricado-para-que-sirve.html">Alcohol boricado para que sirve </a> 
+       <a href="../Destapa-Cañerias/Cual-es-la-forma-mas-rapida-de-Destapar-cantilde;eria-agua-hirviendo.html">Cual es la forma mas rapida de Destapar cañeria agua hirviendo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Destapaciones-En.html">Destapaciones En </a> 
+       <a href="../Servicios/Mejor-Destapa-Cañerias-en-Palermo.html">Mejor Destapa Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Destapa-Cañerias/Alcohol-boricado-a-saturacion.html">Alcohol boricado a saturacion </a> 
+       <a href="../Destapa-Cañerias/Destapaciones-Urgencias.html">Destapaciones Urgencias </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 <!--RandPosts-->
              <div id="recent-post">         <li>
-       <a href="../Servicios/Destapacaños-harpic-turbo.html">Destapacaños harpic turbo </a> 
+       <a href="../Servicios/Empresas-Que-Destapen-Cañerias-en-Palermo.html">Empresas Que Destapen Cañerias en Palermo </a> 
          </li>			  </div>
 <!--EndRandPosts-->
 
